# qdw26-workshop-materials

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.deploy.yaml  compose.yaml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-smoke.yml
docs/: access.md  brev.md  deployment-security.md  environment.md  gui-forwarding.md  workshop-lead-guide.md
scripts/: brev-clone-and-setup.sh  brev-setup.sh  smoke_environment.py
workshops/quantum-device-design/: README.md  workshop.yaml
workshops/quantum-device-design/notebooks/: qubit_qubit_coupling.ipynb  transmon_resonator.ipynb
workshops/quantum-device-design/references/: README.md
