[project]
name = "qdw-workshop-materials"
version = "0.1.0"
description = "Shared workshop environment for Quantum Device Workshop materials"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "django>=5.2.14",
    "idna>=3.15",
    "jupyter>=1.1.1",
    "jupyter-server>=2.18.0",
    "jupyterlab>=4.5.7",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
    "notebook>=7.5.6",
    "quantum-metal>=0.7.1",
    "sqdmetal",
    "urllib3>=2.7.0",
]

[tool.uv.sources]
sqdmetal = { git = "https://github.com/sqdlab/SQDMetal.git" }
# quantum-metal — was pinned to abhishekchak52/qiskit-metal@gui-import-isolation,
# a pre-release fork that's now mainline as quantum-metal v0.7.0+. Pulling from
# PyPI now; see PR description for full upstream changes (lite-flip, qm.view()
# headless viewer, friendly missing-dep errors, etc).
